--- a/src/app/item.module.scss
+++ b/src/app/item.module.scss
@@ -1,9 +1,9 @@
 .page {
-    display: flex;
-    flex: 0 1 calc(33.333% - 13.333px);
+    width: 100%;
     position: relative;
+}
 
-    @media only screen and (max-width: 1016px) {
-        flex: 0 1 calc(100%);
-    }
+.main {
+    display: block;
+    width: 100%;
 }
